comment was added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+  /*********************************/
+  /********HEADER PART START********/
+  /*********************************/
   <header class="header">
     <div class="header__top container">
       <a class="header__top-logo logo" href="index.html"><span>Web</span>Studio</a>
@@ -41,8 +44,15 @@
       </div>
     </div>
   </header>
+  /*********************************/
+  /********HEADER PART END**********/
+  /*********************************/
+
 
   <main class="main">
+    /*********************************/
+    /*****EMPLOYMENT PART START*******/
+    /*********************************/
     <section class="employment container">
       <div class="employment__desc">
         <div class="employment__desc-item">
@@ -78,6 +88,13 @@
         <img class="employment__img" src="/img/imployment/3.jpg" alt="employment picture">
       </div>
     </section>
+    /*********************************/
+    /*****EMPLOYMENT PART END*******/
+    /*********************************/
+
+    /*********************************/
+    /*****TEAM PART START*************/
+    /*********************************/
     <section class="team">
       <div class="container">
         <h2 class="team__title title">Наша команда</h2>
@@ -105,7 +122,13 @@
         </div>
       </div>
     </section>
+    /*********************************/
+    /*******TEAM PART END*************/
+    /*********************************/
   </main>
+  /*********************************/
+  /*******FOOTER PART START*********/
+  /*********************************/
   <footer class="footer">
     <div class="container">
       <a class="footer__logo logo" href="/index.html"><span>Web</span>Studio</a>
@@ -114,6 +137,9 @@
       <a class="footer__phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
   </footer>
+  /*********************************/
+  /*******FOOTER PART END*********/
+  /*********************************/
 </body>
 
 </html>
