portfolio page was added

--- a/index.html
+++ b/index.html
@@ -7,28 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WEB Studio</title>
 
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
   <!-- styles links -->
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
-  /*********************************/
-  /********HEADER PART START********/
-  /*********************************/
+  <!--*****************************
+  ********HEADER PART START********
+  *********************************-->
   <header class="header">
     <div class="header__top container">
       <a class="header__top-logo logo" href="index.html"><span>Web</span>Studio</a>
       <nav class="header__nav">
         <ul class="header__top-list">
-          <li class="header__top-item"><a href="#">Студія</a></li>
-          <li class="header__top-item"><a href="#">Портфоліо</a></li>
+          <li class="header__top-item"><a href="/index.html">Студія</a></li>
+          <li class="header__top-item"><a href="/portfolio.html">Портфоліо</a></li>
           <li class="header__top-item"><a href="#">Контакти</a></li>
         </ul>
       </nav>
@@ -37,22 +31,24 @@
         <a class="header__top-phone" href="tel:380961111111">+38 096 111 11 11</a>
       </div>
     </div>
-    <div class="header__main">
-      <div class="header__main-content">
-        <h1 class="header__main-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="header__main-btn btn">Замовити послугу</button>
-      </div>
-    </div>
   </header>
-  /*********************************/
-  /********HEADER PART END**********/
-  /*********************************/
-
+  <!--*****************************
+********HEADER PART END**********
+*********************************-->
 
   <main class="main">
-    /*********************************/
-    /*****EMPLOYMENT PART START*******/
-    /*********************************/
+
+    <section class="order">
+      <div class="order__content">
+        <h1 class="order__title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="order__btn btn">Замовити послугу</button>
+      </div>
+    </section>
+
+
+    <!--*********************************
+    *****EMPLOYMENT PART START***********
+    *************************************-->
     <section class="employment container">
       <div class="employment__desc">
         <div class="employment__desc-item">
@@ -83,52 +79,52 @@
       </div>
       <h2 class="employment__title title">Чим ми займаємося</h2>
       <div class="employment__images">
-        <img class="employment__img" src="/img/imployment/1.jpg" alt="employment picture">
-        <img class="employment__img" src="/img/imployment/2.jpg" alt="employment picture">
-        <img class="employment__img" src="/img/imployment/3.jpg" alt="employment picture">
+        <img class="employment__img" width="370" src="/img/imployment/1.webp" alt="employment picture">
+        <img class="employment__img" width="370" src="/img/imployment/2.webp" alt="employment picture">
+        <img class="employment__img" width="370" src="/img/imployment/3.webp" alt="employment picture">
       </div>
     </section>
-    /*********************************/
-    /*****EMPLOYMENT PART END*******/
-    /*********************************/
+    <!--***********************************
+    *******EMPLOYMENT PART END*************
+    *************************************-->
 
-    /*********************************/
-    /*****TEAM PART START*************/
-    /*********************************/
+    <!--*********************************
+    *************TEAM PART START*********
+    **********************************-->
     <section class="team">
       <div class="container">
         <h2 class="team__title title">Наша команда</h2>
         <div class="team__inner">
           <div class="team__item">
-            <img class="team__item-img" src="/img/team/1.jpg" alt="Product Designer">
+            <img class="team__item-img" width="810" src="/img/team/1.webp" alt="Product Designer">
             <h3 class="team__name">Ігор Дем'яненко</h3>
             <p class="team__position">Product Designer</p>
           </div>
           <div class="team__item">
-            <img class="team__item-img" src="/img/team/2.jpg" alt="Frontend Developer">
+            <img class="team__item-img" width="810" src="/img/team/2.webp" alt="Frontend Developer">
             <h3 class="team__name">Ольга Рєпіна</h3>
             <p class="team__position">Frontend Developer</p>
           </div>
           <div class="team__item">
-            <img class="team__item-img" src="/img/team/3.jpg" alt="Marketing  ">
+            <img class="team__item-img" width="810" src="/img/team/3.webp" alt="Marketing  ">
             <h3 class="team__name">Микола Тарасов</h3>
             <p class="team__position">Marketing</p>
           </div>
           <div class="team__item">
-            <img class="team__item-img" src="/img/team/4.jpg" alt="UI Designer">
+            <img class="team__item-img" width="810" src="/img/team/4.webp" alt="UI Designer">
             <h3 class="team__name">Михайло Єрмаков</h3>
             <p class="team__position">UI Designer</p>
           </div>
         </div>
       </div>
     </section>
-    /*********************************/
-    /*******TEAM PART END*************/
-    /*********************************/
+    <!--*********************************
+    *************TEAM PART END***********
+    **********************************-->
   </main>
-  /*********************************/
-  /*******FOOTER PART START*********/
-  /*********************************/
+  <!--*********************************
+  *********FOOTER PART START***********
+  **********************************-->
   <footer class="footer">
     <div class="container">
       <a class="footer__logo logo" href="/index.html"><span>Web</span>Studio</a>
@@ -137,9 +133,9 @@
       <a class="footer__phone" href="tel:+380961111111">+38 096 111 11 11</a>
     </div>
   </footer>
-  /*********************************/
-  /*******FOOTER PART END*********/
-  /*********************************/
+  <!--*********************************
+  *********FOOTER PART END*************
+  **********************************-->
 </body>
 
 </html>
