--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="order">
       <div class="order__content">
         <h1 class="order__title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="order__btn btn">Замовити послугу</button>
+        <button class="order__btn btn" data-modal-open>Замовити послугу</button>
       </div>
     </section>
 
@@ -521,6 +521,19 @@
   <!--*********************************
   *********FOOTER PART END*************
   **********************************-->
+
+  <!--*********************************
+  *********POPUP PART START************
+  **********************************-->
+  <div class="order-popup is-hidden" data-modal>
+    <form class="order-popup__form" action="">
+      <img class="order-popup__close" data-modal-close src="./img/svg/close-popup.svg" alt="close">
+    </form>
+  </div>
+  <!--*********************************
+  *********POPUP PART END**************
+  **********************************-->
+  <script type="module" src="./script/main.js"></script>
 </body>
 
 </html>
